--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ button {
 
 header {
     background: hsl(193, 100%, 96%);
-    background-image: url(bg-hero-desktop.svg);
+    background-image: url(./images/bg-hero-desktop.svg);
     display: flex;
     flex-direction: column;
 }
@@ -685,7 +685,7 @@ button:active {
 
 @media screen and (max-width: 375px) {
     header {
-        background-image: url(bg-hero-mobile.svg);
+        background-image: url(./images/bg-hero-mobile.svg);
     }
 
     .head-1 {
